added .cd extension to be ignored in gitignored

--- a/.gitignore
+++ b/.gitignore
@@ -9,3 +9,4 @@
 /RISK_CONSOLIDATED/RISK_CONSOLIDATED.vcxproj
 /RISK_CONSOLIDATED/ClassDiagram.cd
 /RISK_CONSOLIDATED/ClassDiagram1.cd
+/RISK_CONSOLIDATED/*.cd
